# ClaudeCodeRealtimeVoiceControl

./: .gitignore  CLAUDE.md  README.md
.continue/mcpServers/: new-mcp-server-1.yaml
apps/claude_code_voice/: README.md
apps/claude_code_voice/docs/: local-setup-notes.md  voice-mode-8.5.1.md
apps/claude_code_voice/prompts/: session_start.md
apps/realtime_voice/: README.md  package-lock.json  package.json  server.mjs
apps/realtime_voice/config/: claude-bridge.json
apps/realtime_voice/docs/: claude-bridge.md  design.md  overview.md  (+1 more)
apps/realtime_voice/python_supervisor/: pyproject.toml
apps/realtime_voice/python_supervisor/src/realtime_voice_supervisor/: __init__.py  cli.py  companion.py  companion_server.py  git_tools.py  harness.py  memory.py  mentor.py  models.py  prompts.py  repo_tools.py  supervisor.py
cursor_exports/: cursor_voice_access_setup_for_cc.md  cursor_voice_access_setup_using_android.md
docs/: architecture.md  claude-code-workflow.md  codex-handover-quickstart.md  codex-handover.md  collaborative-roadmap.md  companion-architecture-sketch.md  companion-integration-guide.md  mentor-v1-checklist.md  mentor-v1-plan.md  migration-notes.md  realtime-roadmap.md  session-handoff.md  troubleshooting.md  voice-systems.md
scripts/: apply_voicemode_patch.sh  install_claude_code_voice.sh  start_companion_server.sh  start_realtime_voice.sh  sync_local_config.sh  test_send_keys.py  verify_audio_stack.sh  verify_realtime_voice.sh  verify_voicemode.sh
templates/: asoundrc.example  claude-mcp.example.json  cursor-mcp.example.json  voicemode.env.example
(+14 files in other folders)
