[project]
name = "realtime-voice-supervisor"
version = "0.1.0"
description = "Python Agents SDK supervisor for the realtime voice prototype."
requires-python = ">=3.10"
dependencies = [
  "openai-agents",
  "pydantic>=2.0,<3.0",
  "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
